process recursion problem
