# internal/model/category.go
@@ -4,3 +4,5 @@ type Category struct {
 	Id   int64  `json:"id"`
 	Name string `json:"name"`
 }
+
+type Categorys []Category
