# internal/model/test.go
@@ -1,0 +1,6 @@
+package model
+
+type TestRecursion struct {
+	Id       int64            `json:"id"`
+	Children []*TestRecursion `json:"children"`
+}
